# Game-Away

./: .gitignore  CMakeLists.txt  GameAway.rar  README.md  build.bat  package.bat  vcpkg.json
src/: config.hpp  main.cpp
src/client/: client.cpp  client.hpp  input_hook.cpp  input_hook.hpp  overlay_window.cpp  overlay_window.hpp
src/server/: input_replay.cpp  input_replay.hpp  server.cpp  server.hpp
src/utils/: crypto.cpp  crypto.hpp  token.cpp  token.hpp
